# portfolio_idoia

./: .pypirc  Idoia_portfolio.py  README.md  READMETODO.md  Untitled-1.js  _anim.txt  cowportrait.dzi  iCodeIdoia_portfolio.py  icodeidoia.yml  left.dzi  manual_setup.ipynb  package-lock.json  package.json  portfolio_Idoia.py  pyproject.toml  requirements - Copy.txt  requirements.txt  setup.py  spec-file.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
DeepZoomTools.egg-info/: PKG-INFO  SOURCES.txt
html/: test.html
pages/: 1 LIVE Deep Zoom image_app.py  2 LIVE Remove Bg_app.py  2a LIVE Remove Bg_app.py  3 LIVE Square Filler_app.py  3a LIVE Square Filler_app.py  3b LIVE Square Filler_app.py  3c LIVE Square Filler_app.py  4 LIVE Dalle Image Generator_app.py  4 LIVE Image 2 OCR.py  4 LIVE OCR image_app.py  4 LIVE Stock Predictor.py  5 LIVE Dalle Image Generator_app.py  6 LIVE Dog Classifier_Clasificador Canino_app.py  7 FASTHTML LIVE Square Filler_app.py  7 LIVE SD Stable Diffusion XL 1.py  7 testing.py  IDOIA Remove Bg_app.py  IDOIA Square Filler_app.py  LIVE Dalle Image Generator_app.py  LIVE Deep Zoom image_app  copy.py  LIVE Deep Zoom image_app .py  LIVE Deep zoom image .py  LIVE Remove Bg_app.py  LIVE Slide.py  LIVE Square Filler_app.py  LIVE Super Resolution_app.py  _helloworld-dzi - Copy.py  _videotest.py  _❤request_my_CV - Copy.py  codeformer.py  extractingcss copy.html  extractingcss.html  helloworld-dzi.py  iPredict.py  icecream - Copy.html  icecream.html  imageslider.html  imagetopromptbuilder.py  projects.py  test.html  (+4 more)
style/: w3.css
(+52 files in other folders)
